修复文件快传问题，优化Activity界面切换

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
 
     <string name="activity_trans_anim_duration">300</string>
     <string name="xxs_share">的分享</string>
+    <string name="searching">正在搜索...</string>
 </resources>
