--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,5 @@
     <string name="exit">退出</string>
     <string name="select_photo">选择图片</string>
     <string name="get_fail">获取失败</string>
+    <string name="select_avatar">选择头像</string>
 </resources>
