--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,7 @@
     <string name="click_here_to_login">点此登录</string>
     <string name="back">返回</string>
     <string name="select_all">全选</string>
+    <string name="loading_">loading</string>
+    <string name="dynamic_header">dynamic header</string>
+    <string name="my_concern">关注的人</string>
 </resources>
