--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,6 @@
     <string name="send">发送</string>
     <string name="add_comment">添加评论</string>
     <string name="login_first">请先登陆</string>
+    <string name="message">消息</string>
+    <string name="zan">赞</string>
 </resources>
