--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -124,4 +124,5 @@
     <string name="not_alow_empty">不允许为空</string>
     <string name="concern_num">关注%1$s%2$d</string>
     <string name="fans_num">粉丝%1$s%2$d</string>
+    <string name="already_concern">已关注</string>
 </resources>
