--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,4 +126,10 @@
     <string name="fans_num">粉丝%1$s%2$d</string>
     <string name="already_concern">已关注</string>
     <string name="cancel_concern">取消关注</string>
+    <string name="person_setting">个人设置</string>
+    <string name="change_avatar">更换头像</string>
+    <string name="change_nickname">更改昵称</string>
+    <string name="change_signature">更改个签</string>
+    <string name="person_info_edit">个人资料编辑</string>
+    <string name="save">保存</string>
 </resources>
