--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,4 +135,6 @@
     <string name="search_hint">文件名/用户名/手机号/邮箱</string>
     <string name="file">文件</string>
     <string name="user">用户</string>
+    <string name="collection">收藏</string>
+    <string name="cancel_collection">取消收藏</string>
 </resources>
