修改编辑用户信息界面，改掉EditText光标显示位置问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -147,4 +147,7 @@
     <string name="none">无</string>
     <string name="add_your_description">添加你的描述</string>
     <string name="add_description">添加描述</string>
+    <string name="click_it_to_edit_signature">点此编辑个签</string>
+    <string name="edit_signature">编辑个签</string>
+    <string name="edit_signature_success">修改个签成功</string>
 </resources>
