--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="password">password</string>
     <string name="login">登录</string>
 
-    <string name="loading">正在加载中...</string>
+    <string name="loading">正在加载</string>
     <string name="load_failed">加载失败，请点我重试</string>
     <string name="load_end">没有更多数据</string>
 
@@ -155,4 +155,10 @@
     <string name="already_upload">上传了</string>
     <string name="already_download">下载了</string>
     <string name="modify_success">修改成功</string>
+    <string name="add_message">添加消息</string>
+    <string name="pull_refresh">下拉刷新</string>
+    <string name="release_refresh">释放刷新</string>
+    <string name="pull_down_load">下拉加载</string>
+    <string name="star_record">点赞记录</string>
+    <string name="comment_record">评论记录</string>
 </resources>
