个人资料卡修改完成

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -162,4 +162,5 @@
     <string name="star_record">点赞记录</string>
     <string name="comment_record">评论记录</string>
     <string name="have_new_message">有新消息</string>
+    <string name="private_letter">私信</string>
 </resources>
