--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -163,4 +163,5 @@
     <string name="comment_record">评论记录</string>
     <string name="have_new_message">有新消息</string>
     <string name="private_letter">私信</string>
+    <string name="re_login_tip"><![CDATA[登录失效，请重新登录>.<]]></string>
 </resources>
