完善个人文件管理

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -169,4 +169,7 @@
     <string name="upload_file_to_here">上传文件</string>
     <string name="select_directory">选择文件夹</string>
     <string name="select">选择</string>
+    <string name="please_input_new_name">请输入新的名字</string>
+    <string name="change_fail">修改失败</string>
+    <string name="move_fail">移动失败</string>
 </resources>
