--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -173,4 +173,5 @@
     <string name="move_fail">移动失败</string>
     <string name="select_directory">选择文件夹</string>
     <string name="upload_to">上传到</string>
+    <string name="classification_display">分类查看</string>
 </resources>
