--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -176,4 +176,6 @@
     <string name="classification_display">分类查看</string>
     <string name="download_now">立即下载</string>
     <string name="look_comment">查看评论</string>
+    <string name="collect_success">收藏成功</string>
+    <string name="cancel_collect_success">取消收藏成功</string>
 </resources>
