--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -178,4 +178,5 @@
     <string name="look_comment">查看评论</string>
     <string name="collect_success">收藏成功</string>
     <string name="cancel_collect_success">取消收藏成功</string>
+    <string name="nothing_to_live">什么都没留下~</string>
 </resources>
