--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,4 +179,6 @@
     <string name="collect_success">收藏成功</string>
     <string name="cancel_collect_success">取消收藏成功</string>
     <string name="nothing_to_live">什么都没留下~</string>
+    <string name="already_cancel">已取消</string>
+    <string name="cancel_select_all">取消全选</string>
 </resources>
