--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,5 @@
     <string name="share_success">分享成功</string>
     <string name="share_qr">分享二维码</string>
     <string name="share_link">分享链接</string>
+    <string name="directory_share_is_not_supported">暂时还不支持文件夹分享</string>
 </resources>
