--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -191,4 +191,5 @@
     <string name="share_qr">分享二维码</string>
     <string name="share_link">分享链接</string>
     <string name="directory_share_is_not_supported">暂时还不支持文件夹分享</string>
+    <string name="finding_item_avatar">finding_item_avatar</string>
 </resources>
